corrected horizontal scroll bar and images

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -90,6 +90,7 @@
 
 .list {
 	height: calc(100% - 66px);
+	overflow-x: hidden;
 	overflow-y: auto;
 	margin: 0;
 	
